--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,131 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>AngularLeaflet</title>
-  <base href="http://localhost:4200/"/>
+  <base href="http://localhost:4200/" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
- 
+
 </head>
+
 <body>
-  <app-root></app-root>
+
+
+
+  <div class="wrapper">
+    <div class="sidebar" data-color="green" data-image="../assets/img/sidebar-6.jpg">
+      <!--
+        Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
+
+        Tip 2: you can also add an image using data-image tag
+    -->
+      <div class="sidebar-wrapper">
+        <ul class="nav">
+          <li>
+            <a href="#pablo">
+              <i class="nc-icon nc-alien-33"></i>
+              <p>Home</p>
+            </a>
+          </li>
+          <li>
+            <a href="#pablo">
+              <i class="nc-icon nc-bell-55"></i>
+              <p>Experiments</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="main-panel">
+      <!-- Navbar -->
+      <nav class="navbar navbar-expand-lg " color-on-scroll="500">
+        <div class=" container-fluid  ">
+          <a class="navbar-brand" href="#pablo"> Landslide Moitoring </a>
+          <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-bar burger-lines"></span>
+            <span class="navbar-toggler-bar burger-lines"></span>
+            <span class="navbar-toggler-bar burger-lines"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            <ul class="nav navbar-nav mr-auto">
+              <li class="nav-item">
+                <a href="#" class="nav-link" data-toggle="dropdown">
+                  <i class="nc-icon nc-palette"></i>
+                  <span class="d-lg-none">Dashboard</span>
+                </a>
+              </li>
+              <li class="dropdown nav-item">
+                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                  <i class="nc-icon nc-planet"></i>
+                  <span class="notification">5</span>
+                  <span class="d-lg-none">Notification</span>
+                </a>
+                <ul class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Notification 1</a>
+                  <a class="dropdown-item" href="#">Notification 2</a>
+                  <a class="dropdown-item" href="#">Notification 3</a>
+                  <a class="dropdown-item" href="#">Notification 4</a>
+                  <a class="dropdown-item" href="#">Another notification</a>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">
+                  <i class="nc-icon nc-zoom-split"></i>
+                  <span class="d-lg-block">&nbsp;Search</span>
+                </a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#pablo">
+                  <span class="no-icon">Account</span>
+                </a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                  aria-haspopup="true" aria-expanded="false">
+                  <span class="no-icon">Dropdown</span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                  <div class="divider"></div>
+                  <a class="dropdown-item" href="#">Separated link</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#pablo">
+                  <span class="no-icon">Log out</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- End Navbar -->
+      <div class="content">
+        <app-root></app-root>
+      </div>
+    </div>
+  </div>
+
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
   <script src="https://unpkg.com/shpjs@latest/dist/shp.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
