--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="http://localhost:4200/" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
-
+  <link rel="stylesheet" type="text/css" href="/src/primeflex.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
