--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <!-- <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
 <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
 <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" /> -->
@@ -19,7 +20,7 @@
 <body>
   <div class="main-panel">
     <div class="content">
-        <app-root></app-root>
+      <app-root></app-root>
     </div>
   </div>
 
