--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,12 @@
   <!-- <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
 <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
 <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" /> -->
+  <style>
+    body {
+      background-color: #717172;
+      color: white;
+    }
+  </style>
 </head>
 
 <body>
