--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" /> -->
   <style>
     body {
-      background-color: #717172;
+      background-color: #e1e1f1;
       color: white;
     }
   </style>
